Añadida la conexión via BT

--- a/fuentes.qrc
+++ b/fuentes.qrc
@@ -12,5 +12,6 @@
         <file>img/red-led16.png</file>
         <file>img/btgreen24.png</file>
         <file>img/Fotografiar48.png</file>
+        <file>img/tryagain.gif</file>
     </qresource>
 </RCC>
