--- a/guiapp.ui
+++ b/guiapp.ui
@@ -319,6 +319,27 @@ color: rgb(59, 58, 54);</string>
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="reconnect">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>20</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-color: rgb(0, 0, 0);
+background-color: rgb(243, 246, 255);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="fuentes.qrc">
+      <normaloff>:/resources/img/img/tryagain.gif</normaloff>:/resources/img/img/tryagain.gif</iconset>
+    </property>
+   </widget>
    <zorder>label</zorder>
    <zorder>calibrar</zorder>
    <zorder>line_2</zorder>
@@ -330,6 +351,7 @@ color: rgb(59, 58, 54);</string>
    <zorder>down</zorder>
    <zorder>inferior</zorder>
    <zorder>groupBox</zorder>
+   <zorder>reconnect</zorder>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -352,6 +374,8 @@ color: rgb(59, 58, 54);</string>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="fuentes.qrc"/>
+ </resources>
  <connections/>
 </ui>
